--- a/01_idea/readme.me
+++ b/01_idea/readme.me
@@ -1,81 +1,31 @@
-📚 BookSwap — اپلیکیشن مدیریت و تبادل کتاب
+# 💡 مجموعه پروژه‌های هوشمند: کتاب، خدمات فنی، آموزش زبان
 
-توضیح
-BookSwap یک اپلیکیشن اجتماعی برای مدیریت کتاب‌های شخصی و تبادل آن‌ها با دیگر کاربران است. هدف اصلی کاهش هزینه‌ها و جلوگیری از قطع بی‌رویه درختان از طریق اشتراک‌گذاری منابع فرهنگی است.
+این مخزن شامل سه پروژه کاربردی با بهره‌گیری از هوش مصنوعی است:
 
-ویژگی‌ها
+۱. اپلیکیشن مدیریت و تبادل کتاب  
+۲. پلتفرم رزرو خدمات فنی محلی  
+۳. اپلیکیشن تمرین روزانه زبان انگلیسی
+
+---
+
+## 📚 مدیریت و تبادل کتاب
+
+### معرفی
+این اپلیکیشن برای مدیریت کتاب‌های شخصی و تبادل آن‌ها با دیگر کاربران طراحی شده است. هدف اصلی کاهش هزینه‌ها و جلوگیری از قطع بی‌رویه درختان از طریق اشتراک‌گذاری منابع فرهنگی است.
+
+### امکانات
 - ثبت و مدیریت کتاب‌های شخصی
 - جست‌وجو و درخواست کتاب از دیگر کاربران
 - سیستم امتیازدهی و اعتبار کاربران
 - نقشه تبادل کتاب در نزدیکی محل زندگی
 
-مزایای زیست‌محیطی
+### مزایای زیست‌محیطی
 - کاهش مصرف کاغذ
 - ترویج فرهنگ مطالعه و اشتراک‌گذاری
 
 ---
 
-🧑‍🔧 TechReserve — پلتفرم رزرو خدمات فنی محلی با هوش مصنوعی
+## 🧑‍🔧 رزرو خدمات فنی محلی با هوش مصنوعی
 
-توضیح
-TechReserve یک پلتفرم هوشمند برای رزرو خدمات فنی مانند لوله‌کشی، برق‌کاری، تعمیرات و... است. این سیستم با استفاده از هوش مصنوعی تجربه‌ای سریع، دقیق و شخصی‌سازی‌شده ارائه می‌دهد.
-
-ویژگی‌های مبتنی بر AI
-- 🔍 پیشنهادگر هوشمند: انتخاب بهترین متخصص بر اساس موقعیت، سابقه و نوع مشکل
-- 💬 پردازش زبان طبیعی (NLP): کاربر فقط مشکل را تایپ می‌کند، AI آن را دسته‌بندی کرده و متخصص مناسب را پیشنهاد می‌دهد
-- 📷 تشخیص تصویر: آپلود عکس مشکل (مثلاً نشتی)، AI نوع خرابی را تشخیص می‌دهد
-- 📅 زمان‌بندی هوشمند: پیشنهاد بهترین زمان ملاقات بر اساس تقویم متخصص و کاربر
-
----
-
-🧠 LangDaily — اپلیکیشن تمرین روزانه زبان انگلیسی با هوش مصنوعی
-
-توضیح
-LangDaily یک اپلیکیشن آموزشی برای تمرین روزانه زبان انگلیسی است که با استفاده از هوش مصنوعی تمرین‌ها را بر اساس سطح و علایق کاربر شخصی‌سازی می‌کند.
-
-ویژگی‌های مبتنی بر AI
-- 🧩 تولید تمرین شخصی‌سازی‌شده: بر اساس سطح، اشتباهات قبلی و علایق کاربر
-- 🔊 تبدیل متن به گفتار (TTS): تمرین شنیداری با صدای طبیعی
-- 🎙️ پردازش گفتار (Speech Recognition): بررسی تلفظ و ارائه بازخورد دقیق
-- 🤖 چت‌بات آموزشی: گفت‌وگوی روزانه برای تمرین مکالمه واقعی
-
----
-
-⚙️ نصب و اجرا
-
-`bash
-
-کلون کردن مخزن
-git clone https://github.com/username/project-suite.git
-
-ورود به پوشه پروژه مورد نظر
-cd BookSwap
-
-یا
-cd TechReserve
-
-یا
-cd LangDaily
-
-نصب وابستگی‌ها
-npm install
-
-اجرای پروژه
-npm start
-`
-
----
-
-📄 مجوز
-این پروژه تحت مجوز MIT منتشر شده است. برای اطلاعات بیشتر به فایل LICENSE مراجعه کنید.
-
----
-
-🙌 مشارکت
-اگر علاقه‌مند به توسعه یا بهبود این پروژه‌ها هستید، خوشحال می‌شویم که Pull Request ارسال کنید یا Issue جدید ثبت نمایید.
-
-`
-
----
-
-اگه خواستی برای هر پروژه یه README.md جداگانه هم بنویسم یا ساختار پوشه‌ها و فایل‌های اولیه رو آماده کنم، فقط بگو. دوست داری اول با BookSwap شروع کنیم؟
+### معرفی
+این پلتفرم هوشمند برای رزرو خدمات فنی مانند
