--- a/01_idea/readme.me
+++ b/01_idea/readme.me
@@ -1,36 +1,19 @@
-حتماً Abolfazl عزیز! در ادامه نسخه کامل و استاندارد فایل README.md برای گیت‌هاب رو به‌صورت HTML و با متن کاملاً فارسی و Justify شده می‌بینی. این فایل شامل معرفی سه پروژه، ویژگی‌ها، نقش هوش مصنوعی، نحوه اجرا و مجوز هست:
-
----
-
-`html
 <!DOCTYPE html>
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>مجموعه پروژه‌های هوشمند</title>
+  <title>پروژه‌ها</title>
   <style>
     body {
-      font-family: "Vazirmatn", sans-serif;
       direction: rtl;
       text-align: justify;
-      background-color: #f9f9f9;
+      font-family: sans-serif;
       padding: 2rem;
-      line-height: 1.8;
+      background: #fff;
+      color: #000;
     }
-    h1, h2, h3 {
-      color: #333;
-    }
-    code {
-      background-color: #eee;
-      padding: 2px 6px;
-      border-radius: 4px;
-      font-family: monospace;
-    }
-    pre {
-      background-color: #eee;
-      padding: 1rem;
-      border-radius: 6px;
-      overflow-x: auto;
+    h2 {
+      margin-top: 2rem;
     }
     ul {
       padding-right: 1.5rem;
@@ -39,112 +22,20 @@
 </head>
 <body>
 
-  <h1>💡 مجموعه پروژه‌های هوشمند: کتاب، خدمات فنی، آموزش زبان</h1>
-  <p>
-    این مخزن شامل سه پروژه کاربردی با بهره‌گیری از هوش مصنوعی است:
-  </p>
+  <h1>مجموعه سه پروژه با استفاده از هوش مصنوعی</h1>
+
+  <h2>۱. اپلیکیشن مدیریت و تبادل کتاب</h2>
+  <p>تبادل کتاب برای صرفه‌جویی در پول و جلوگیری از قطع بی‌رویه درختان.</p>
+
+  <h2>۲. پلتفرم رزرو خدمات فنی محلی</h2>
   <ul>
-    <li>اپلیکیشن مدیریت و تبادل کتاب</li>
-    <li>پلتفرم رزرو خدمات فنی محلی</li>
-    <li>اپلیکیشن تمرین روزانه زبان انگلیسی</li>
+    <li>پیشنهاد بهترین متخصص بر اساس موقعیت، سابقه و نوع مشکل</li>
+    <li>پردازش زبان طبیعی برای تشخیص نوع مشکل از متن کاربر</li>
+    <li>تشخیص تصویر برای شناسایی خرابی از عکس</li>
+    <li>زمان‌بندی هوشمند بر اساس تقویم متخصص و کاربر</li>
   </ul>
 
-  <hr>
-
-  <h2>📚 مدیریت و تبادل کتاب</h2>
-  <h3>معرفی</h3>
-  <p>
-    این اپلیکیشن برای مدیریت کتاب‌های شخصی و تبادل آن‌ها با دیگر کاربران طراحی شده است. هدف اصلی کاهش هزینه‌ها و جلوگیری از قطع بی‌رویه درختان از طریق اشتراک‌گذاری منابع فرهنگی است.
-  </p>
-
-  <h3>امکانات</h3>
+  <h2>۳. اپلیکیشن تمرین روزانه زبان انگلیسی</h2>
   <ul>
-    <li>ثبت و مدیریت کتاب‌های شخصی</li>
-    <li>جست‌وجو و درخواست کتاب از دیگر کاربران</li>
-    <li>سیستم امتیازدهی و اعتبار کاربران</li>
-    <li>نقشه تبادل کتاب در نزدیکی محل زندگی</li>
-  </ul>
-
-  <h3>مزایای زیست‌محیطی</h3>
-  <ul>
-    <li>کاهش مصرف کاغذ</li>
-    <li>ترویج فرهنگ مطالعه و اشتراک‌گذاری</li>
-  </ul>
-
-  <hr>
-
-  <h2>🧑‍🔧 رزرو خدمات فنی محلی با هوش مصنوعی</h2>
-  <h3>معرفی</h3>
-  <p>
-    این پلتفرم هوشمند برای رزرو خدمات فنی مانند لوله‌کشی، برق‌کاری، تعمیرات و... طراحی شده است. با استفاده از هوش مصنوعی، تجربه‌ای سریع، دقیق و شخصی‌سازی‌شده ارائه می‌دهد.
-  </p>
-
-  <h3>امکانات هوشمند</h3>
-  <ul>
-    <li>🔍 پیشنهادگر هوشمند: انتخاب بهترین متخصص بر اساس موقعیت، سابقه و نوع مشکل</li>
-    <li>💬 پردازش زبان طبیعی: کاربر فقط مشکل را تایپ می‌کند، سیستم آن را دسته‌بندی کرده و متخصص مناسب را پیشنهاد می‌دهد</li>
-    <li>📷 تشخیص تصویر: آپلود عکس مشکل (مثلاً نشتی)، سیستم نوع خرابی را تشخیص می‌دهد</li>
-    <li>📅 زمان‌بندی هوشمند: پیشنهاد بهترین زمان ملاقات بر اساس تقویم متخصص و کاربر</li>
-  </ul>
-
-  <hr>
-
-  <h2>🧠 تمرین روزانه زبان انگلیسی با هوش مصنوعی</h2>
-  <h3>معرفی</h3>
-  <p>
-    این اپلیکیشن آموزشی برای تمرین روزانه زبان انگلیسی طراحی شده است و با استفاده از هوش مصنوعی تمرین‌ها را بر اساس سطح و علایق کاربر شخصی‌سازی می‌کند.
-  </p>
-
-  <h3>امکانات هوشمند</h3>
-  <ul>
-    <li>🧩 تولید تمرین شخصی‌سازی‌شده: بر اساس سطح، اشتباهات قبلی و علایق کاربر</li>
-    <li>🔊 تبدیل متن به گفتار: تمرین شنیداری با صدای طبیعی</li>
-    <li>🎙️ پردازش گفتار: بررسی تلفظ و ارائه بازخورد دقیق</li>
-    <li>🤖 گفت‌وگوی روزانه با چت‌بات آموزشی برای تمرین مکالمه</li>
-  </ul>
-
-  <hr>
-
-  <h2>⚙️ نحوه نصب و اجرا</h2>
-  <pre><code>
-
-کلون کردن مخزن
-git clone https://github.com/username/project-suite.git
-
-ورود به پوشه پروژه مورد نظر
-cd تبادل-کتاب
-
-یا
-cd خدمات-فنی
-
-یا
-cd آموزش-زبان
-
-نصب وابستگی‌ها
-npm install
-
-اجرای پروژه
-npm start
-  </code></pre>
-
-  <hr>
-
-  <h2>📄 مجوز</h2>
-  <p>
-    این پروژه تحت مجوز MIT منتشر شده است. برای اطلاعات بیشتر به فایل LICENSE مراجعه کنید.
-  </p>
-
-  <hr>
-
-  <h2>🙌 مشارکت</h2>
-  <p>
-    اگر علاقه‌مند به توسعه یا بهبود این پروژه‌ها هستید، خوشحال می‌شویم که Pull Request ارسال کنید یا Issue جدید ثبت نمایید.
-  </p>
-
-</body>
-</html>
-`
-
----
-
-اگه خواستی همینو به‌صورت فایل HTML ذخیره کنم یا برات ساختار پوشه‌های پروژه رو هم آماده کنم، فقط بگو. دوست داری اول با پروژه تبادل کتاب شروع کنیم؟
+    <li>تولید تمرین شخصی‌سازی‌شده بر اساس سطح و علایق</li>
+    <li>تبدیل متن به گفتار برای تمرین
