--- a/01_idea/readme.me
+++ b/01_idea/readme.me
@@ -1,41 +1,60 @@
-<!DOCTYPE html>
-<html lang="fa">
-<head>
-  <meta charset="UTF-8">
-  <title>پروژه‌ها</title>
-  <style>
-    body {
-      direction: rtl;
-      text-align: justify;
-      font-family: sans-serif;
-      padding: 2rem;
-      background: #fff;
-      color: #000;
-    }
-    h2 {
-      margin-top: 2rem;
-    }
-    ul {
-      padding-right: 1.5rem;
-    }
-  </style>
-</head>
-<body>
+# مجموعه سه پروژه با استفاده از هوش مصنوعی
 
-  <h1>مجموعه سه پروژه با استفاده از هوش مصنوعی</h1>
+این مخزن شامل سه ایده کاربردی است که با کمک هوش مصنوعی تجربه‌ای هوشمندتر و مؤثرتر برای کاربران فراهم می‌کنند.
 
-  <h2>۱. اپلیکیشن مدیریت و تبادل کتاب</h2>
-  <p>تبادل کتاب برای صرفه‌جویی در پول و جلوگیری از قطع بی‌رویه درختان.</p>
+---
 
-  <h2>۲. پلتفرم رزرو خدمات فنی محلی</h2>
-  <ul>
-    <li>پیشنهاد بهترین متخصص بر اساس موقعیت، سابقه و نوع مشکل</li>
-    <li>پردازش زبان طبیعی برای تشخیص نوع مشکل از متن کاربر</li>
-    <li>تشخیص تصویر برای شناسایی خرابی از عکس</li>
-    <li>زمان‌بندی هوشمند بر اساس تقویم متخصص و کاربر</li>
-  </ul>
+## ۱. اپلیکیشن مدیریت و تبادل کتاب
 
-  <h2>۳. اپلیکیشن تمرین روزانه زبان انگلیسی</h2>
-  <ul>
-    <li>تولید تمرین شخصی‌سازی‌شده بر اساس سطح و علایق</li>
-    <li>تبدیل متن به گفتار برای تمرین
+هدف این اپلیکیشن ایجاد بستری برای مدیریت کتاب‌های شخصی و تبادل آن‌ها بین کاربران است. این کار باعث صرفه‌جویی در هزینه‌ها و جلوگیری از قطع بی‌رویه درختان می‌شود.
+
+### ویژگی‌ها:
+- ثبت و مدیریت کتاب‌های شخصی
+- جست‌وجو و درخواست کتاب از دیگر کاربران
+- نمایش موقعیت مکانی افراد برای تبادل کتاب
+- ارتقای فرهنگ مطالعه و اشتراک‌گذاری منابع
+
+---
+
+## ۲. پلتفرم رزرو خدمات فنی محلی
+
+این پلتفرم برای رزرو خدمات فنی مانند لوله‌کشی، برق‌کاری و تعمیرات طراحی شده و با استفاده از هوش مصنوعی فرآیند انتخاب متخصص و زمان‌بندی را بهینه می‌کند.
+
+### نقش هوش مصنوعی:
+- پیشنهاد بهترین متخصص بر اساس موقعیت، سابقه و نوع مشکل
+- پردازش زبان طبیعی: کاربر فقط مشکل را تایپ می‌کند، سیستم آن را تحلیل و دسته‌بندی می‌کند
+- تشخیص تصویر: کاربر عکس مشکل را آپلود می‌کند، سیستم نوع خرابی را تشخیص می‌دهد
+- زمان‌بندی هوشمند: پیشنهاد زمان مناسب بر اساس تقویم متخصص و کاربر
+
+---
+
+## ۳. اپلیکیشن تمرین روزانه زبان انگلیسی
+
+این اپلیکیشن برای تمرین روزانه زبان انگلیسی طراحی شده و با استفاده از هوش مصنوعی تمرین‌ها را بر اساس سطح و علایق کاربر شخصی‌سازی می‌کند.
+
+### نقش هوش مصنوعی:
+- تولید تمرین‌های شخصی‌سازی‌شده بر اساس سطح، اشتباهات قبلی و علایق کاربر
+- تبدیل متن به گفتار برای تمرین شنیداری با صدای طبیعی
+- پردازش گفتار برای بررسی تلفظ و ارائه بازخورد
+- چت‌بات آموزشی برای گفت‌وگوی روزانه و تمرین مکالمه
+
+---
+
+## نحوه اجرا
+
+```bash
+# کلون کردن مخزن
+git clone https://github.com/username/ai-projects.git
+
+# ورود به پوشه پروژه مورد نظر
+cd تبادل-کتاب
+# یا
+cd خدمات-فنی
+# یا
+cd آموزش-زبان
+
+# نصب وابستگی‌ها
+npm install
+
+# اجرای پروژه
+npm start
