--- a/01_idea/readme.me
+++ b/01_idea/readme.me
@@ -1,33 +1,54 @@
-## ۱. اپلیکیشن مدیریت و تبادل کتاب
+## 1. سیستم تبادل کتاب دست‌دوم
 
-هدف این اپلیکیشن ایجاد بستری برای مدیریت کتاب‌های شخصی و تبادل آن‌ها بین کاربران است. این کار باعث صرفه‌جویی در هزینه‌ها و جلوگیری از قطع بی‌رویه درختان می‌شود.
+توضیح:  
+یک پلتفرم برای اشتراک‌گذاری و خرید و فروش کتاب‌های دست‌دوم. کاربران می‌توانند کتاب‌های خود را بفروشند یا با دیگران تبادل کنند.
 
-### ویژگی‌ها:
-- ثبت و مدیریت کتاب‌های شخصی
-- جست‌وجو و درخواست کتاب از دیگر کاربران
-- نمایش موقعیت مکانی افراد برای تبادل کتاب
-- ارتقای فرهنگ مطالعه و اشتراک‌گذاری منابع
+ویژگی‌ها:  
+- بارگذاری عکس و توضیح کتاب  
+- امکان خرید، فروش یا تبادل کتاب  
+- امتیازدهی و نظرات کاربران  
+- جستجوی کتاب بر اساس ژانر، نویسنده، قیمت و موقعیت جغرافیایی  
+- ارسال پیام داخلی بین کاربران  
+- امکان تعیین قیمت یا تبادل مستقیم  
 
----
-
-## ۲. پلتفرم رزرو خدمات فنی محلی
-
-این پلتفرم برای رزرو خدمات فنی مانند لوله‌کشی، برق‌کاری و تعمیرات طراحی شده و با استفاده از هوش مصنوعی فرآیند انتخاب متخصص و زمان‌بندی را بهینه می‌کند.
-
-### نقش هوش مصنوعی:
-- پیشنهاد بهترین متخصص بر اساس موقعیت، سابقه و نوع مشکل
-- پردازش زبان طبیعی: کاربر فقط مشکل را تایپ می‌کند، سیستم آن را تحلیل و دسته‌بندی می‌کند
-- تشخیص تصویر: کاربر عکس مشکل را آپلود می‌کند، سیستم نوع خرابی را تشخیص می‌دهد
-- زمان‌بندی هوشمند: پیشنهاد زمان مناسب بر اساس تقویم متخصص و کاربر
+مزایا:  
+- دسترسی به کتاب‌های ارزان‌تر و متنوع  
+- ایجاد جامعه‌ای از علاقه‌مندان به کتاب  
+- کاهش ضایعات و ترویج اقتصاد دورانی  
+- امکان کسب درآمد جانبی برای کاربران  
 
 ---
 
-## ۳. اپلیکیشن تمرین روزانه زبان انگلیسی
+## 2. پلتفرم رزرو خدمات فنی محلی
 
-این اپلیکیشن برای تمرین روزانه زبان انگلیسی طراحی شده و با استفاده از هوش مصنوعی تمرین‌ها را بر اساس سطح و علایق کاربر شخصی‌سازی می‌کند.
+توضیح:  
+پیدا کردن متخصصین فنی قابل اعتماد در نزدیکی محل زندگی. این پلتفرم برای افراد پرمشغله و شهرهای متوسط و بزرگ کاربرد دارد.
 
-### نقش هوش مصنوعی:
-- تولید تمرین‌های شخصی‌سازی‌شده بر اساس سطح، اشتباهات قبلی و علایق کاربر
-- تبدیل متن به گفتار برای تمرین شنیداری با صدای طبیعی
-- پردازش گفتار برای بررسی تلفظ و ارائه بازخورد
-- چت‌بات آموزشی برای گفت‌وگوی روزانه و تمرین مکالمه
+ویژگی‌ها:  
+- جستجوی متخصص بر اساس موقعیت مکانی  
+- مشاهده امتیاز و نظرات کاربران  
+- رزرو زمان و پرداخت آنلاین  
+- پیگیری وضعیت سفارش و پشتیبانی  
+
+مزایا:  
+- حل مشکل پیدا کردن نیروی فنی مطمئن  
+- صرفه‌جویی در زمان و کاهش ریسک انتخاب متخصص  
+- مناسب برای شهرهای متوسط و بزرگ  
+
+---
+
+## 3. اپلیکیشن یادآوری و تمرین روزانه زبان انگلیسی
+
+توضیح:  
+کمک به کاربران برای یادگیری مستمر زبان انگلیسی با تمرین‌های کوتاه روزانه، بدون فشار و در زمان‌های خالی.
+
+ویژگی‌ها:  
+- ارسال واژه، جمله یا تمرین کوتاه روزانه  
+- تمرین شنیداری، نوشتاری و ترجمه  
+- پیگیری پیشرفت کاربر  
+- حالت یادآوری هوشمند بر اساس زمان‌های خالی کاربر  
+
+مزایا:  
+- یادگیری بدون فشار  
+- مناسب برای افراد پرمشغله  
+- قابل توسعه برای زبان‌های دیگر
