--- a/01_idea/readme.me
+++ b/01_idea/readme.me
@@ -1,3 +1,9 @@
+# ایده‌های استارتاپی
+
+در این بخش سه ایده‌ی استارتاپی معرفی شده‌اند که هرکدام شامل توضیح، ویژگی‌ها و مزایا هستند.
+
+---
+
 ## 1. سیستم تبادل کتاب دست‌دوم
 
 توضیح:  
